fix: prevent contact form from overlapping navbar
Adjusted CSS to ensure that the contact form no longer overlaps with the navbar.

--- a/src/components/atoms/Label.css
+++ b/src/components/atoms/Label.css
@@ -4,7 +4,7 @@
   font-size: 40px;
   box-sizing: border-box;
   height: 30px;
-  margin-bottom: 80px;
+  margin-bottom: 70px;
 }
 
 @media (max-width: 1024px) {
