--- a/src/components/molecules/Allsocialmedia.css
+++ b/src/components/molecules/Allsocialmedia.css
@@ -35,7 +35,7 @@
 @media (min-width: 1025px) {
   .containerSocialmedialogo {
     position: relative;
-    margin-top: 50px;
+    margin-top: 30px;
     background-color: transparent;
     padding: 0;
   }
